# IPMES_PLUS

./: .gitignore  Cargo.toml  LICENSE  README.md  artifact.md
benches/: join_layer_benchmark.rs
data/: README.md
data/flow_patterns/: DP3.json  SP3.json
data/freq_patterns/: SP10_regex.json  SP11_regex.json  SP2_regex.json  SP3_regex.json  SP4_regex.json  SP6_regex.json  SP7_regex.json
data/paper/: behavioral_pattern.json  data_graph.csv
data/universal_patterns/: DP1.json  DP1_regex.json  DP2.json  DP2_regex.json  DP3.json  DP3_regex.json  DP4.json  DP4_regex.json  DP5.json  DP5_regex.json  SP1.json  SP10.json  SP10_freq.json  SP10_regex.json  SP11.json  SP11_regex.json  SP12.json  SP12_flow.json  SP12_regex.json  SP1_regex.json  SP2.json  SP2_regex.json  SP3.json  SP3_regex.json  SP4.json  SP4_regex.json  SP5.json  SP5_regex.json  SP6.json  SP6_flow.json  SP6_regex.json  SP7.json  SP7_regex.json  SP8.json  SP8_regex.json  SP9.json  SP9_regex.json  plot_pattern.py  template.json
docs/: dsn_artifact_manual.md  paper_experiments.md
ipmes-rust/: .gitignore  Cargo.toml  ipmes-rust.code-workspace
ipmes-rust/scripts/: find_bugs.py  (+4 more)
scripts/: README.md  convert_data_graph.py  experiments.py  find_bugs.py  gen_graph.py  pattern_generator.py  pattern_upgrader.py  preprocess.py  profile.sh  run_all.py  run_attack.sh  to_universal_patterns.py
src/: main.rs  match_event.rs  pattern_match.rs
testcases/: SP8_sub_patterns.txt  SP9_sub_patterns.txt  attack_results.txt  expect_SP10.csv  expect_SP12.csv  expect_SP6.csv  expect_SP8.csv  test.csv  unexpected_SP8.csv
(+154 files in other folders)
