[package]
name = "ipmes-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.11"
clap = { version = "4.4.2", features = ["derive"] }
cpu-time = "1.0.0"
csv = "1.2.2"
env_logger = "0.10.0"
itertools = "0.11.0"
log = "0.4.20"
nix = { version = "0.27.1", features = ["resource"] }
petgraph = "0.6.4"
regex = "1.10.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
slab = "0.4.9"
thiserror = "1.0.48"
windows = { version = "0.52.0", features = ["System_Diagnostics"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
test-log = "0.2.16"

[profile.release]
debug = 1

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }